kubernetes-examples/dfly-namespace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dfly-deployment-metadata
  namespace: dfly-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dfly-app
  template:
    metadata:
      labels:
        app: dfly-app
    spec:
      containers:
      - name: dfly-container
        image: subratit/projects-16th-nov:latest
        ports:
        - containerPort: 82
