kubernetes-examples/dfly-namespace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dfly-svc
spec:
  ports:
  - port: 82
    targetPort: 82
    protocol: TCP
    name: http
  selector:
    app: dfly-app
