kubernetes-examples/hotel-namespace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hotel
