kubernetes-examples/dfly-namespace-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dfly-ingress
  namespace: dfly-namespace
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
                serviceName: dfly-svc
                servicePort: 82
